<resources>
    <string name="app_name">MyRegisterForm</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="masukan_data_dibawah_untuk_membuat_akun_baru">Masukan data dibawah untuk membuat akun baru</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="saya_telah_menyetujui_ketenutuan">Saya telah menyetujui ketenutuan</string>
    <string name="emaill">your email @</string>
</resources>
